--- a/index.html
+++ b/index.html
@@ -1,18 +1,71 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>ちゃま君のポートフォリオ</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>ちゃま君のポートフォリオ</h1>
-    <p>iOSエンジニアを目指して修行中！SwiftUIでアプリ開発しています。</p>
-    <h2>📱 アプリ一覧</h2>
+  <header>
+    <h1>Portfolio</h1>
+    <p>未経験からiOSエンジニアを目指して勉強中です！SwiftやSwiftUIの学習、個人でのアプリ開発に取り組んでいます！</p>
+  </header>
+
+  <section>
+    <h2>📝 Profile</h2>
+    <p>名前：高橋 直斗<br>
+       年齢：32歳<br>
+       経歴：非エンジニア職からエンジニア転職を目指して独学中</p>
+
+       <p>3年間の専門学校を卒業後、柔道整復師の国家資格を取得。<br>
+        現在に至るまで、接骨院や整体院にて院長として勤務しています。<br>
+        患者様と向き合う現場で積み重ねてきた経験を、今度はテクノロジーを通して社会に活かしたいと考え、<br>
+        iOSエンジニアへの転向を目指しています。<br>
+        完全な異業種への転職となりますが、これまでの経験が無駄だとは全く思っておりません。<br>
+        コミュニケーション能力や問題解決能力、最後までタスクをやり切るという信念を活かします。</p>
+
+  </section>
+
+  <section>
+    <h2>🎯 Skill</h2>
     <ul>
-        <li><a href="nekojinro.html">🐾 猫人狼</a></li>
-        <li><a href="nekotecho.html">📘 ねこ手帳</a></li>
+      <li>Swift</li>
+      <li>SwiftUI / Xcode / MVVM</li>
+      <li>CoreData / NavigationStack</li>
+      <li>Git / GitHub / SourceTree 基本操作</li>
     </ul>
+    <p>転職後を見据え、Swift、SwiftUIでのアプリ開発、SourceTreeを用いたバージョン管理などを行なっています。<br>
+       また、チーム開発に慣れるため、現在チームでのアプリ開発にも携わっております。</p>
+  </section>
+
+  <section>
+  <h2>📱 Apps</h2>
+
+  <div class="app-box">
+    <h3>ねこ人狼</h3>
+    <p>人狼風の猫ゲーム。役職確認→画像→説明→投票→結果発表までの一連の流れを実装。<br>
+    5〜10人でプレイすることができるため、飲み会やパーティなどでワイワイ遊ぶことが可能です。</p>
+    <p><a href="#">▶ App Store</a> ／ <a href="#">GitHub</a></p>
+  </div>
+
+  <div class="app-box">
+    <h3>📘 ねこ手帳</h3>
+    <p>猫の健康記録アプリ。CoreDataでの保存やカレンダー連携も実装。<br>
+    猫ちゃんの体調を可愛く、かんたんに管理することができます。</p>
+    <p><a href="#">▶ App Store</a> ／ <a href="#">GitHub</a></p>
+  </div>
+</section>
+
+    <h2>🔗 GitHub Account</h2>
+    <p><a href="https://github.com/chama715">▶ chama715 on GitHub</a></p>
+  </section>
+
+  <section>
+  <h2>Contact</h2>
+  <p>メールでのご連絡はこちらへ：<a href="mailto:naoto0715charlie@gmail.com">naoto0715charlie@gmail.com</a></p>
+</section>
+
 </body>
 </html>
+
