--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     猫ちゃんの体調を可愛く、かんたんに管理することができます。</p>
     <p><a href="#">▶ App Store</a> ／ <a href="#">GitHub</a></p>
   </div>
+<section class="app-box">
+  <h2>🔗 GitHub Account</h2>
+  <p><a href="https://github.com/chama715">▶ chama715 on GitHub</a></p>
 </section>
 
-    <h2>🔗 GitHub Account</h2>
-    <p><a href="https://github.com/chama715">▶ chama715 on GitHub</a></p>
-  </section>
 
   <section>
   <h2>Contact</h2>
