--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
        年齢：32歳<br>
        経歴：非エンジニア職からエンジニア転職を目指して独学中</p>
 
-       <p>3年間の専門学校を卒業後、柔道整復師の国家資格を取得。<br>
-        現在に至るまで、接骨院や整体院にて院長として勤務しています。<br>
-        患者様と向き合う現場で積み重ねてきた経験を、今度はテクノロジーを通して社会に活かしたいと考え、<br>
-        iOSエンジニアへの転向を目指しています。<br>
-        完全な異業種への転職となりますが、これまでの経験が無駄だとは全く思っておりません。<br>
-        コミュニケーション能力や問題解決能力、最後までタスクをやり切るという信念を活かします。</p>
-
+    <p>3年間の専門学校を卒業後、柔道整復師の国家資格を取得。<br>
+       現在に至るまで、接骨院や整体院にて院長として勤務しています。<br>
+       患者様と向き合う現場で積み重ねてきた経験を、今度はテクノロジーを通して社会に活かしたいと考え、<br>
+       iOSエンジニアへの転向を目指しています。<br>
+       完全な異業種への転職となりますが、これまでの経験が無駄だとは全く思っておりません。<br>
+       コミュニケーション能力や問題解決能力、最後までタスクをやり切るという信念を活かします。</p>
   </section>
 
   <section>
@@ -40,32 +39,31 @@
   </section>
 
   <section>
-  <h2>📱 Apps</h2>
+    <h2>📱 Apps</h2>
 
-  <div class="app-box">
-    <h3>ねこ人狼</h3>
-    <p>人狼風の猫ゲーム。役職確認→画像→説明→投票→結果発表までの一連の流れを実装。<br>
-    5〜10人でプレイすることができるため、飲み会やパーティなどでワイワイ遊ぶことが可能です。</p>
-    <p><a href="#">▶ App Store</a> ／ <a href="#">GitHub</a></p>
-  </div>
+    <div class="app-box">
+      <h3>ねこ人狼</h3>
+      <p>人狼風の猫ゲーム。役職確認→画像→説明→投票→結果発表までの一連の流れを実装。<br>
+      5〜10人でプレイすることができるため、飲み会やパーティなどでワイワイ遊ぶことが可能です。</p>
+      <p><a href="#">▶ App Store</a> ／ <a href="#">GitHub</a></p>
+    </div>
 
-  <div class="app-box">
-    <h3>📘 ねこ手帳</h3>
-    <p>猫の健康記録アプリ。CoreDataでの保存やカレンダー連携も実装。<br>
-    猫ちゃんの体調を可愛く、かんたんに管理することができます。</p>
-    <p><a href="#">▶ App Store</a> ／ <a href="#">GitHub</a></p>
-  </div>
-<section class="app-box">
-  <h2>🔗 GitHub Account</h2>
-  <p><a href="https://github.com/chama715">▶ chama715 on GitHub</a></p>
-</section>
-
+    <div class="app-box">
+      <h3>📘 ねこ手帳</h3>
+      <p>猫の健康記録アプリ。CoreDataでの保存やカレンダー連携も実装。<br>
+      猫ちゃんの体調を可愛く、かんたんに管理することができます。</p>
+      <p><a href="#">▶ App Store</a> ／ <a href="#">GitHub</a></p>
+    </div>
+  </section>
 
   <section>
-  <h2>Contact</h2>
-  <p>メールでのご連絡はこちらへ：<a href="mailto:naoto0715charlie@gmail.com">naoto0715charlie@gmail.com</a></p>
-</section>
+    <h2>🔗 GitHub Account</h2>
+    <p><a href="https://github.com/chama715">▶ chama715 on GitHub</a></p>
+  </section>
 
+  <section>
+    <h2>📨 Contact</h2>
+    <p>メールでのご連絡はこちらへ：<a href="mailto:naoto0715charlie@gmail.com">naoto0715charlie@gmail.com</a></p>
+  </section>
 </body>
 </html>
-
