--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       <h3>ねこ人狼</h3>
       <p>人狼風の猫ゲーム。役職確認→画像→説明→投票→結果発表までの一連の流れを実装。<br>
       5〜10人でプレイすることができるため、飲み会やパーティなどでワイワイ遊ぶことが可能です。</p>
-      <p><a href="#">▶ App Store</a> ／ <a href="#">GitHub</a></p>
+      <p><a href="https://apps.apple.com/jp/app/%E3%81%AD%E3%81%93%E4%BA%BA%E7%8B%BC/id6748366976">▶ App Store</a> ／ <a href="https://github.com/chama715/neko-jinro">GitHub</a></p>
     </div>
 
     <div class="app-box">
       <h3>📘 ねこ手帳</h3>
       <p>猫の健康記録アプリ。CoreDataでの保存やカレンダー連携も実装。<br>
       猫ちゃんの体調を可愛く、かんたんに管理することができます。</p>
-      <p><a href="#">▶ App Store</a> ／ <a href="#">GitHub</a></p>
+      <p><a href="https://apps.apple.com/jp/app/%E3%81%AD%E3%81%93%E6%89%8B%E5%B8%B3/id6748690187">▶ App Store</a> ／ <a href="https://github.com/chama715/cat_health_app">GitHub</a></p>
     </div>
   </section>
 
